k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devsecops-lab
  labels:
    app.kubernetes.io/part-of: local-selfhosted-gitlab
