k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: devsecops-lab
spec:
  selector:
    app: backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
